# server/src/models/responses/IFeedResponse.ts
@@ -1,7 +1,15 @@
 import { IPicture } from '../tables/picture';
 
 export interface IFeedResponse {
-    pictures:IPicture[]
+    pictures:IPost[]
     page: number,
     pageSize: number
+}
+
+export interface IPost{
+    id:string,
+    pictureID:string,
+    nsfwTags:string[],
+    tags:string[],
+    votes:number
 }
